--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/geolocation": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-linear-gradient": "^11.4.0",
+    "expo-location": "^14.3.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-maps": "^1.3.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
